# minesweeper

./: main.py  pyproject.toml
game/: __init__.py  board.py
tests/: test_board.py  test_ui.py
ui/: __init__.py  renderer.py
