[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minesweeper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6",
]

[project.scripts]
minesweeper = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["ui", "game"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
